# HexNets

./: .gitignore  Makefile  README.md  cli.py  conftest.py  e2e_test.sh  heartbeat.md  hexnet-class.ipynb  hexnet.py  pyproject.toml  pytest.ini  requirements.txt  working_hexnet.py
.cursor/: AI_QUICK_INDEX.md  ARCHITECTURE.md  CLI_PATTERNS.md  COMPONENT_DEVELOPMENT.md  DEVELOPMENT_PATTERNS.md  FILE_STRUCTURE.md  MEMORY_MANAGEMENT.md  QUICK_REFERENCE.md  README.md  REFERENCE_FILES.md  ROTATION_SYSTEM.md  TESTING.md  benchmark-families.md
docs/: README.md  hexnets_web.md  streamlit_app.md
reference/: hexnet_n2_r0_viewdot.dot  hexnet_n2_r1_viewdot.dot  hexnet_n2_r2_viewdot.dot  hexnet_n2_r3_viewdot.dot  hexnet_n2_r4_viewdot.dot  hexnet_n2_r5_viewdot.dot  hexnet_n3_r0_viewdot.dot  hexnet_n3_r1_viewdot.dot  hexnet_n3_r2_viewdot.dot  hexnet_n3_r3_viewdot.dot  hexnet_n3_r4_viewdot.dot  hexnet_n3_r5_viewdot.dot  hexnet_n4_r0_viewdot.dot  hexnet_n4_r1_viewdot.dot  hexnet_n4_r2_viewdot.dot  hexnet_n4_r3_viewdot.dot  hexnet_n4_r4_viewdot.dot  hexnet_n4_r5_viewdot.dot  hexnet_n5_r0_viewdot.dot  hexnet_n5_r1_viewdot.dot  hexnet_n5_r2_viewdot.dot  hexnet_n5_r3_viewdot.dot  hexnet_n5_r4_viewdot.dot  hexnet_n5_r5_viewdot.dot  hexnet_n6_r0_viewdot.dot  hexnet_n6_r1_viewdot.dot  hexnet_n6_r2_viewdot.dot  hexnet_n6_r3_viewdot.dot  hexnet_n6_r4_viewdot.dot  hexnet_n6_r5_viewdot.dot  hexnet_n7_r0_viewdot.dot  hexnet_n7_r1_viewdot.dot  hexnet_n7_r2_viewdot.dot  hexnet_n7_r3_viewdot.dot  hexnet_n7_r4_viewdot.dot  hexnet_n7_r5_viewdot.dot  hexnet_n8_r0_viewdot.dot  hexnet_n8_r1_viewdot.dot  hexnet_n8_r2_viewdot.dot  hexnet_n8_r3_viewdot.dot  (+2 more)
scripts/: bump_version.py  e2e-bench-A.sh  e2e-reference.sh  e2e-smoke-test.sh  e2e-utils.sh  sync_github_stories.py
src/: cli.py  figure_service.py  logging_config.py  run_service.py  streamlit_app.py  streamlit_main.py  utils.py
stories/: 001-audit-regression-metric-calculations.md  002-fix-cli-docs-code-naming-inconsistencies.md  003-add-run-manifest-fields-paper-traceability.md  004-promote-dataset-registry-first-class-cli.md  005-upgrade-streamlit-visualizer-to-workbench.md  006-add-noisy-synthetic-regression-datasets.md  007-add-two-more-same-dimension-benchmark-datasets.md  008-add-non-constant-learning-rate-schedules.md  009-build-sweep-command-for-batch-experiments.md  010-add-aggregate-run-table-and-comparison-utilities.md  011-add-a-run-browser-page.md  012-add-a-dataset-explorer-page.md  013-add-a-benchmark-comparison-page.md  014-implement-mlp-baseline-parity-runs.md  015-add-sequential-task-training-workflow.md  016-add-cross-direction-training-protocol-support.md  README.md  (+11 more)
(+181 files in other folders)
