[build-system]
requires = ["setuptools", "wheel", "pip", "build", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hexnet"
version = "0.3.0"
description = "Hexagonal Neural Network CLI tool"
authors = [
    { name = "Daniel Lopez", email = "daniellopez123456789@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"

# note all the dependencies are listed here are sometimes duplicated
# in requirements.txt for the sake of streamlit.  If there is a networks
# dependency to add, use this file and use pip freeze > requirements.txt
# to update the requirements.txt file. DO NOT directly edit the requirements.txt file.

dependencies = [
    "numpy",
    "matplotlib",
    "matplotlib-inline",
    "tabulate",
    "streamlit",
    "streamlit-echarts",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "pytest>=7.4.0",
    "build",
    "coverage",
    "twine",
    "pyyaml>=6.0",
]

[project.scripts]
hexnet = "cli:main"


[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]